# search-kv

./: .gitignore  pyproject.toml
data/: download.py
data/rdict/: IDENTITY  LOG  MANIFEST-000004  OPTIONS-000007
src/: document.py  load.py  main.py  write.py  writer.py
