[tool.poetry]
name = "search-kv"
version = "0.1.0"
description = "Full-text search on a key-value store"
authors = ["Ahmed Al-Dulimi <ahmed.aldulimi@student.unimelb.edu.au>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.8.0"
tantivy = "^0.13.2"
rocksdict = "^0.2.16"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
selectolax = "^0.3.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
